app/_styles/globals.css
@import "./utilities.css";

body {
  font-size: var(--text-base-size);
  color: var(--primary);
  background: var(--background);

  display: grid;
  min-height: 100dvh;
  grid-template-rows: auto 1fr auto;
}

a:hover:not([role='button']) {
  color: var(--primary);
  text-decoration: underline;
}

.blurred-background {
  position: fixed;
  inset: 0;
  backdrop-filter: blur(0);
  transition: backdrop-filter 0.2s ease-in-out;
  pointer-events: auto;
  display: none;

  &.active {
    backdrop-filter: blur(5px);
    pointer-events: auto;
    display: initial;
  }
}

